# mcp-preflight

./: .gitignore  LICENSE  PRINCIPLES.md  README.md  mcp_preflight.py  pyproject.toml
.github/: CONTRIBUTING.md
docs/: server-manifest.md
tests/: README.md  conftest.py  show_outputs.py  test_capabilities.py  test_classify_and_signals.py  test_cli_behavior.py  test_diff_reports.py  test_flags_coverage.py  test_integration_toy_servers.py  test_output_formatting.py  test_stderr_notes_and_timeouts.py
tests/toy_servers/: toy_auth_crash.py  toy_auth_gated.py  toy_capabilities.py  toy_cwd_aware.py  toy_env_aware.py  toy_home_aware.py  toy_open.py  toy_partial_resources.py  toy_stderr_chatty.py  toy_tools_only.py
