[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-preflight"
version = "0.1.0"
description = "Connect to any MCP server and see what it does before you trust it."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
]

[project.scripts]
mcp-preflight = "mcp_preflight:main"

[tool.setuptools]
py-modules = ["mcp_preflight"]
