[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-preflight"
version = "0.1.0"
description = "See what an MCP server exposes before you trust or connect it."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "jordanstarrk"}]
keywords = ["mcp", "security", "cli", "ai", "agents"]
dependencies = [
    "mcp>=1.26.0",
]

[project.scripts]
mcp-preflight = "mcp_preflight:main"

[tool.setuptools]
py-modules = ["mcp_preflight"]
